test/fail/customised/NestedProjectRoots.agda
module NestedProjectRoots where

import Imports.A
